--- a/resumePage.html
+++ b/resumePage.html
@@ -100,7 +100,7 @@
                             <li>Javascript</li>
                             <li>React</li>
                             <li>Angular</li>
-                            <!-- <li>Node.js</li> -->
+                            <li>Node.js</li>
                             <li>Android</li>
                             <li>Java</li>
                             <li>Kotlin</li>
@@ -218,7 +218,7 @@
                             <ul class="skill-list">
                                 <li>Worked with one of the top 10 news organisations of India to manage the website and provide technical support.</li>
                                 <li>Managed Cloud Infrastructure using AWS and worked on web developement using technologies like Drupal, HTML, CSS and Javascript as well as Google Analytics and Google Ad Manager.</li>
-                                <li>Worked as a lead to create new user interface and functionality design for the website using the mentioned technologies.</li>
+                                <!-- <li>Worked as a lead to create new user interface and functionality design for the website using the mentioned technologies.</li> -->
                             </ul>
                         </div>
 
@@ -231,10 +231,11 @@
                         </div>
 
                         <div class="point-container">
-                            <div class="content b f-mid">Backend Developement using Django</div>
+                            <div class="content b f-mid">Backend Developement using Node.js and Django</div>
                             <ul class="skill-list">
+                                <li>Used Node.js as a backend for a data collection application where users created profile uploaded information and tracked their uploads.</li>
                                 <li>Worked with one of the top automobile manufacturing company in India, on a web portal for their customers to track vehicles and manage business.</li>
-                                <li>Used django backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>
+                                <li>Used django backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>                                
                             </ul>
                         </div>
 
